# dns

./: .gitignore  .travis.yml  Changelog  Changelog.md  Doctests.hs  README.md  SimpleServer.hs  Test.hs  TestProtocol.hs  appveyor.yml  cabal.project  dns.cabal  stack.yaml
.github/workflows/: main.yml
Internal/Network/DNS/: Base32Hex.hs  Memo.hs  StateBinary.hs
Internal/Network/DNS/Decode/: Internal.hs  Parsers.hs
Internal/Network/DNS/Encode/: Builders.hs  Internal.hs
Internal/Network/DNS/Resolver/: Internal.hs
Internal/Network/DNS/Types/: Internal.hs
Network/: DNS.hs
Network/DNS/: Base32Hex.hs  Decode.hs  Encode.hs  IO.hs  Imports.hs  Internal.hs  Lookup.hs  LookupRaw.hs  Memo.hs  Query.hs  Resolver.hs  Resolver.hsc  Response.hs  StateBinary.hs  Transport.hs  Types.hs  Utils.hs  Windows.hsc  ZoneTransfer.hs
Network/DNS/Decode/: Internal.hs  Parsers.hs
Network/DNS/Encode/: Builders.hs  Internal.hs
Network/DNS/Types/: Internal.hs
Network/DNS/ZoneTransfer/: Conduit.hs
cbits/: dns.c
examples/: SimpleServer.hs
include/: dns.h
internal/Network/DNS/: Imports.hs  Memo.hs  StateBinary.hs
internal/Network/DNS/Decode/: Internal.hs  Parsers.hs
internal/Network/DNS/Encode/: Builders.hs  Internal.hs
internal/Network/DNS/Types/: Base.hs  EDNS.hs  Internal.hs  Message.hs  Op.hs  RData.hs  Resolver.hs  SIG.hs  Sec.hs
test/: CollapseLength.hs  DecodeSpec.hs  EncodeSpec.hs  LookupSpec.hs  RoundTripSpec.hs
test2/: IOSpec.hs  LookupSpec.hs  doctests.hs
test3/: Main.hs
