Name:                   dns
Version:                4.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               DNS library in Haskell
Description:
  A thread-safe DNS library for both clients and servers written
  in pure Haskell.
Category:               Network
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     Changelog.md
                        cbits/dns.c
Tested-With:            GHC == 7.10.3
                      , GHC == 8.0.2
                      , GHC == 8.2.2
                      , GHC == 8.4.4
                      , GHC == 8.6.5

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Network.DNS
                        Network.DNS.Lookup
                        Network.DNS.LookupRaw
                        Network.DNS.Resolver
                        Network.DNS.Utils
                        Network.DNS.Types
                        Network.DNS.Decode
                        Network.DNS.Decode.Internal
                        Network.DNS.Encode
                        Network.DNS.Encode.Internal
                        Network.DNS.IO
  Other-Modules:        Network.DNS.Base32Hex
                        Network.DNS.Decode.Parsers
                        Network.DNS.Encode.Builders
                        Network.DNS.Imports
                        Network.DNS.Memo
                        Network.DNS.StateBinary
                        Network.DNS.Transport
                        Network.DNS.Types.Internal
  if impl(ghc < 8)
    Build-Depends:      semigroups
  Build-Depends:        base >= 4 && < 5
                      , array
                      , async
                      , attoparsec
                      , auto-update
                      , base16-bytestring
                      , base64-bytestring
                      , bytestring
                      , containers
                      , cryptonite
                      , hourglass
                      , iproute >= 1.3.2
                      , mtl
                      , network >= 2.3
                      , psqueues
  if os(windows)
    Build-Depends:    split
    C-Sources:        cbits/dns.c
    Extra-Libraries:  iphlpapi

Test-Suite network-tests
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test2
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        LookupSpec
                        IOSpec
  Build-Depends:        dns
                      , base
                      , hspec
                      , network

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        EncodeSpec
                        DecodeSpec
                        RoundTripSpec
  Build-Depends:        dns
                      , QuickCheck >= 2.9
                      , base
                      , bytestring
                      , hspec
                      , iproute >= 1.3.2
                      , word8

Test-Suite doctests
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test2
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , array
                      , async
                      , attoparsec
                      , auto-update
                      , base16-bytestring
                      , base64-bytestring
                      , bytestring
                      , containers
                      , cryptonite
                      , dns
                      , doctest
                      , hourglass
                      , iproute >= 1.3.2
                      , mtl
                      , network >= 2.3
                      , psqueues
  if os(windows)
    Build-Depends:    split
    C-Sources:        cbits/dns.c
    Extra-Libraries:  iphlpapi

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/dns.git
